Add layout to page
Next is the design.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <p>Header Logo</p>
+        <h2>Header Logo</h2>
 
         <nav>
             <a href=".">header link one</a>
@@ -33,47 +33,46 @@
         </figure>
     </main>
 
-    <section>
+    <section id="information">
         <h2>Some random information.</h2>
 
-        <figure>
-            <img src="https://picsum.photos/200" alt="placeholder image 1">
-            <figcaption>
-                this is some subtext
-                under an illustration
-                or image
-            </figcaption>
-        </figure>
-
-        <figure>
-            <img src="https://picsum.photos/200" alt="placeholder image 2">
-            <figcaption>
-                this is some subtext
-                under an illustration
-                or image
-            </figcaption>
-        </figure>
-
-        <figure>
-            <img src="https://picsum.photos/200" alt="placeholder image 3">
-            <figcaption>
-                this is some subtext
-                under an illustration
-                or image
-            </figcaption>
-        </figure>
-
-        <figure>
-            <img src="https://picsum.photos/200" alt="placeholder image 4">
-            <figcaption>
-                this is some subtext
-                under an illustration
-                or image
-            </figcaption>
-        </figure>
+        <section id="figs">
+            <figure>
+                <img src="https://picsum.photos/200" alt="placeholder image 1">
+                <figcaption>
+                    this is some subtext
+                    under an illustration
+                    or image
+                </figcaption>
+            </figure>
+            <figure>
+                <img src="https://picsum.photos/200" alt="placeholder image 2">
+                <figcaption>
+                    this is some subtext
+                    under an illustration
+                    or image
+                </figcaption>
+            </figure>
+            <figure>
+                <img src="https://picsum.photos/200" alt="placeholder image 3">
+                <figcaption>
+                    this is some subtext
+                    under an illustration
+                    or image
+                </figcaption>
+            </figure>
+            <figure>
+                <img src="https://picsum.photos/200" alt="placeholder image 4">
+                <figcaption>
+                    this is some subtext
+                    under an illustration
+                    or image
+                </figcaption>
+            </figure>
+        </section>
     </section>
 
-    <section>
+    <section id="quote">
         <blockquote>
             <p>
                 This is an inspiring quote, or a testimonial from a
@@ -85,7 +84,7 @@
         </blockquote>
     </section>
 
-    <section>
+    <section id="cta">
         <div>
             <div>
                 <h3>Call to action! It's time!</h3>
