--- a/index.html
+++ b/index.html
@@ -7,31 +7,30 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h2>Header Logo</h2>
-
-        <nav>
-            <a href=".">header link one</a>
-            <a href=".">header link two</a>
-            <a href=".">header link three</a>
-        </nav>
-    </header>
-
-    <main>
-        <section>
-            <h1>This website is awesome</h1>
-            <p>
-                This website has some subtext that goes here under the
-                main title. It's a smaller font and the color is lower
-                contrast
-            </p>
-            <button>Sign up</button>
-        </section>
-
-        <figure>
-            this is a placeholder for an image
-        </figure>
-    </main>
+    <div id="top">
+        <header>
+            <h2>Header Logo</h2>
+            <nav>
+                <a href=".">header link one</a>
+                <a href=".">header link two</a>
+                <a href=".">header link three</a>
+            </nav>
+        </header>
+        <main>
+            <section>
+                <h1>This website is awesome</h1>
+                <p>
+                    This website has some subtext that goes here under the
+                    main title. It's a smaller font and the color is lower
+                    contrast
+                </p>
+                <button>Sign up</button>
+            </section>
+            <figure>
+                this is a placeholder for an image
+            </figure>
+        </main>
+    </div>
 
     <section id="information">
         <h2>Some random information.</h2>
@@ -80,12 +79,12 @@
                 people will actually read it. Who knows? All I know
                 is that it looks nice.
             </p>
-            <footer>-Thor, God of Thunder</footer>
         </blockquote>
+        <p id="quote-footer">-Thor, God of Thunder</p>
     </section>
 
-    <section id="cta">
-        <div>
+    <section class="cta">
+        <div class="cta container">
             <div>
                 <h3>Call to action! It's time!</h3>
                 <p>Sign up for our product by clicking that button right over there!</p>
